@@ -1,5 +1,6 @@
 Jean-Philippe Barrette-LaPierre (25 June 2005) version 0.7.0-pre1
 - Updated MSVC makefiles for new examples and for Multi integration.
+- Better Multi interface error handling.
 
 Jean-Philippe Barrette-LaPierre (25 June 2005) version 0.6.1
 - Changed to version 0.7.0-pre1
